more web updates

--- a/HTML/portfolio.html
+++ b/HTML/portfolio.html
@@ -140,7 +140,7 @@
                 </div>
               </div>
 
-              <div class="grid-item portfolio-column col-lg-3 col-md-4 col-sm-6 col-xs-16 software">
+              <div class="grid-item portfolio-column col-lg-5 col-md-4 col-sm-6 col-xs-16 software">
                 <div class="portfolio-item portfolio-item-2"><img src="assets/images/aria-homepage.jpg" alt="CREATIVELY DESIGNED">
                   <div class="overlay">
                     <div class="cell-vertical-wrapper">
@@ -195,7 +195,7 @@
                   </div>
                 </div>
               </div>
-              <div class="grid-item portfolio-column col-lg-3 col-md-4 col-sm-6 col-xs-12 software">
+              <div class="grid-item portfolio-column col-lg-5 col-md-4 col-sm-6 col-xs-12 software">
                 <div class="portfolio-item portfolio-item-2"><img src="assets/images/design-home.jpg" alt="CREATIVELY DESIGNED">
                   <div class="overlay">
                     <div class="cell-vertical-wrapper">
@@ -237,7 +237,7 @@
                 </div>
               </div>
 
-              <div class="grid-item portfolio-column col-lg-3 col-md-4 col-sm-6 col-xs-12 design">
+              <div class="grid-item portfolio-column col-lg-2 col-md-4 col-sm-6 col-xs-12 design">
                 <div class="portfolio-item portfolio-item-2"><img src="assets/images/aq-invite.jpg" alt="CREATIVELY DESIGNED">
                   <div class="overlay">
                     <div class="cell-vertical-wrapper">
@@ -251,7 +251,7 @@
                 </div>
               </div>
 
-              <div class="grid-item portfolio-column col-lg-3 col-md-4 col-sm-6 col-xs-12 design">
+              <div class="grid-item portfolio-column col-lg-3 col-md-4 col-sm-6 col-xs-5 design">
                 <div class="portfolio-item portfolio-item-2"><img src="assets/images/dla-mwr-logo.jpg" alt="CREATIVELY DESIGNED">
                   <div class="overlay">
                     <div class="cell-vertical-wrapper">
@@ -279,7 +279,7 @@
                 </div>
               </div>
 
-              <div class="grid-item portfolio-column col-lg-3 col-md-4 col-sm-6 col-xs-12 software">
+              <div class="grid-item portfolio-column col-lg-2 col-md-4 col-sm-6 col-xs-12 software">
                 <div class="portfolio-item portfolio-item-2"><img src="assets/images/fortune-teller.jpg" alt="CREATIVELY DESIGNED">
                   <div class="overlay">
                     <div class="cell-vertical-wrapper">
@@ -321,37 +321,37 @@
                 </div>
               </div>
 
-              <div class="grid-item portfolio-column col-lg-3 col-md-4 col-sm-6 col-xs-12 art interior">
-                <div class="portfolio-item portfolio-item-2"><img src="assets/images/portfolio-tas-8.jpg" alt="CREATIVELY DESIGNED">
+              <div class="grid-item portfolio-column col-lg-4 col-md-4 col-sm-6 col-xs-12 software">
+                <div class="portfolio-item portfolio-item-2"><img src="assets/images/maynard-home.jpg" alt="CREATIVELY DESIGNED">
                   <div class="overlay">
                     <div class="cell-vertical-wrapper">
                       <div class="cell-middle overlay-content text-center">
-                        <h5 class="heading-icon-1">CREATIVELY DESIGNED</h5>
-                        <div class="font-serif caption">Lorem ipsum dolor sit</div>
-                        <div class="group-link"><a href="portfolio-single-small-slide.html" class="icon-link"></a><a href="assets/images/portfolio-tas-8.jpg" class="zoom-link icon-outline-vector-icons-pack-67"></a></div>
+                        <h5 class="heading-icon-1">Maynard UMC</h5>
+                        <div class="font-serif caption">Maynard UMC church web homepage</div>
+                        <div class="group-link"><a href="portfolio-single-small-slide.html" class="icon-link"></a><a href="assets/images/maynard-home.jpg" class="zoom-link icon-outline-vector-icons-pack-67"></a></div>
                       </div>
                     </div>
                   </div>
                 </div>
               </div>
 
-              <div class="grid-item portfolio-column col-lg-3 col-md-4 col-sm-6 col-xs-12 business photography">
-                <div class="portfolio-item portfolio-item-2"><img src="assets/images/portfolio-tas-7.jpg" alt="CREATIVELY DESIGNED">
+              <div class="grid-item portfolio-column col-lg-2 col-md-4 col-sm-6 col-xs-12 design">
+                <div class="portfolio-item portfolio-item-2"><img src="assets/images/lawlogo.jpg" alt="CREATIVELY DESIGNED">
                   <div class="overlay">
                     <div class="cell-vertical-wrapper">
                       <div class="cell-middle overlay-content text-center">
-                        <h5 class="heading-icon-1">CREATIVELY DESIGNED</h5>
-                        <div class="font-serif caption">Lorem ipsum dolor sit</div>
-                        <div class="group-link"><a href="portfolio-single-small-slide.html" class="icon-link"></a><a href="assets/images/portfolio-tas-7.jpg" class="zoom-link icon-outline-vector-icons-pack-67"></a></div>
+                        <h5 class="heading-icon-1">Oesterle Law</h5>
+                        <div class="font-serif caption">Offical logo for Oesterle Law</div>
+                        <div class="group-link"><a href="portfolio-single-small-slide.html" class="icon-link"></a><a href="assets/images/lawlogo.jpg" class="zoom-link icon-outline-vector-icons-pack-67"></a></div>
                       </div>
                     </div>
                   </div>
                 </div>
               </div>
+
             </div>
           </div>
         </div>
-        <div class="portfolio-show-more text-center"><a href="#">SHOW MORE</a></div>
       </section>
       <!--site footer-->
     <footer class="footer-preset-02">
@@ -367,10 +367,10 @@
                     <div class="icon">
                       <p>Find Me:</p>
                       <ul class="social-02">
-                        <li><a href="#"><i class="fa icon-github"></i></a></li>
-                        <li><a href="#"><i class="fa icon-linkedin"></i></a></li>
-                        <li><a href="#"><i class="fa icon-gplus"></i></a></li>
-                      </ul>
+                         <li><a href="https://github.com/micaelaberry" target="_blank"><i class="fa icon-github"></i></a></li>
+                         <li><a href="https://www.linkedin.com/in/micaela-berry" target="_blank"><i class="fa icon-linkedin"></i></a></li>
+                         <li><a href="https://plus.google.com/107768663606450418299" target="_blank"><i class="fa icon-gplus"></i></a></li>
+                       </ul>
                     </div>
                   </div>
                 </div>
