--- a/HTML/aboutme.html
+++ b/HTML/aboutme.html
@@ -59,7 +59,7 @@
               </li>
 
 
-              <li><a href="#">PORTFOLIO</a>
+              <li><a href="portfolio.html">PORTFOLIO</a>
               </li>
               
             </ul>
@@ -253,10 +253,10 @@
                     </div>
                     <div class="icon">
                       <p>Find Me:</p>
-                      <ul class="social-02">
-                        <li><a href="#"><i class="fa icon-github"></i></a></li>
-                        <li><a href="#"><i class="fa icon-linkedin"></i></a></li>
-                        <li><a href="#"><i class="fa icon-gplus"></i></a></li>
+                     <ul class="social-02">
+                        <li><a href="https://github.com/micaelaberry" target="_blank"><i class="fa icon-github"></i></a></li>
+                        <li><a href="https://www.linkedin.com/in/micaela-berry" target="_blank"><i class="fa icon-linkedin"></i></a></li>
+                        <li><a href="https://plus.google.com/107768663606450418299" target="_blank"><i class="fa icon-gplus"></i></a></li>
                       </ul>
                     </div>
                   </div>
