--- a/HTML/index.html
+++ b/HTML/index.html
@@ -309,9 +309,9 @@
                     <div class="icon">
                       <p>Find Me:</p>
                       <ul class="social-02">
-                        <li><a href="#"><i class="fa icon-github"></i></a></li>
-                        <li><a href="#"><i class="fa icon-linkedin"></i></a></li>
-                        <li><a href="#"><i class="fa icon-gplus"></i></a></li>
+                        <li><a href="https://github.com/micaelaberry" target="_blank"><i class="fa icon-github"></i></a></li>
+                        <li><a href="https://www.linkedin.com/in/micaela-berry" target="_blank"><i class="fa icon-linkedin"></i></a></li>
+                        <li><a href="https://plus.google.com/107768663606450418299" target="_blank"><i class="fa icon-gplus"></i></a></li>
                       </ul>
                     </div>
                   </div>
