--- a/HTML/page-contact.html
+++ b/HTML/page-contact.html
@@ -90,11 +90,10 @@
 
             <div class="division"><span></span></div>
             <div class="nav-social">
-              <ul class="social-01">
-                <li><a href="#"><i class="fa fa-github"></i></a></li>
-                <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                <li><a href="#"><i class="fa fa-google-plus"> </i></a></li>
-                
+              <ul class="social-02">
+                <li><a href="https://github.com/micaelaberry" target="_blank"><i class="fa icon-github"></i></a></li>
+                <li><a href="https://www.linkedin.com/in/micaela-berry" target="_blank"><i class="fa icon-linkedin"></i></a></li>
+                <li><a href="https://plus.google.com/107768663606450418299" target="_blank"><i class="fa icon-gplus"></i></a></li>
               </ul>
             </div>
           </div>
