more up to the dates

--- a/portfolio.html
+++ b/portfolio.html
@@ -167,7 +167,7 @@
                       <div class="cell-middle overlay-content text-center">
                         <h5 class="heading-icon-1">Columbus Ohio Taco Joints</h5>
                         <div class="font-serif caption">Database review website of taco joints</div>
-                        <div class="group-link"><a href="#" class="icon-link"></a>
+                        <div class="group-link"><a href="portfolio-details-aria.html" class="icon-link"></a>
                           <a href="assets/images/ohioTaco.jpg" class="zoom-link icon-outline-vector-icons-pack-67"></a>
                         </div>
                       </div>
@@ -176,14 +176,14 @@
                 </div>
               </div>
 
-              <div class="grid-item portfolio-column col-lg-5 col-md-4 col-sm-6 col-xs-16 software">
+               <div class="grid-item portfolio-column col-lg-4 col-md-4 col-sm-6 col-xs-12 interior fashion">
                 <div class="portfolio-item portfolio-item-2"><img src="assets/images/aria-homepage.jpg" alt="CREATIVELY DESIGNED">
                   <div class="overlay">
                     <div class="cell-vertical-wrapper">
                       <div class="cell-middle overlay-content text-center">
                         <h5 class="heading-icon-1">ARIA VI</h5>
-                        <div class="font-serif caption">Choose Your Own Adventure Web App Game</div>
-                        <div class="group-link"><a href="#"  class="icon-link"></a><a href="assets/images/aria-homepage.jpg" class="zoom-link icon-outline-vector-icons-pack-67"></a></div>
+                        <div class="font-serif caption">Choose Your Own Adventure game app</div>
+                        <div class="group-link"><a href="portfolio-details-aria.html" class="icon-link"></a><a href="assets/images/aria-homepage.jpg" class="zoom-link icon-outline-vector-icons-pack-67"></a></div>
                       </div>
                     </div>
                   </div>
