--- a/portfolio-details-aria.html
+++ b/portfolio-details-aria.html
@@ -107,9 +107,9 @@
     <main>
       <!--site header-->
       <header class="site-header common-static-header">
-        <div data-stellar-background-ratio="0.25" style="background-image: url('assets/images/header-parallax.jpg');" class="parallax-bg"></div>
+        <div data-stellar-background-ratio="0.25" style="background-image: url('assets/images/tech-red.jpeg');" class="parallax-bg"></div>
         <div class="container">
-          <h1>PORTFOLIO</h1>
+          <h1>PORTFOLIO DETAILS</h1>
         </div>
       </header>
       <section class="no-padding bgc-gray">
@@ -124,10 +124,19 @@
               <div>
                 <div class="portfolio-box-slider simple-slider dir-nav">
                   <div class="portfolio-slider-item">
-                    <div class="item-image"><img src="assets/images/aria-homepage.jpg" data-mfp-src="assets/images/aria-homepage.jpg" alt="Portfolio slider image" class="mfp-item"></div>
+                    <div class="item-image"><img src="assets/images/taco-regions.jpg" data-mfp-src="assets/images/taco-regions.jpg" alt="Portfolio slider image" class="mfp-item"></div>
                   </div>
+
                  <div class="portfolio-slider-item">
-                    <div class="item-image"><img src="assets/images/aria-intro.jpg" data-mfp-src="assets/images/aria-intro.jpg" alt="Portfolio slider image" class="mfp-item"></div>
+                    <div class="item-image"><img src="assets/images/taco-joint.jpg" data-mfp-src="assets/images/taco-joint.jpg" alt="Portfolio slider image" class="mfp-item"></div>
+                  </div>
+
+                 <div class="portfolio-slider-item">
+                    <div class="item-image"><img src="assets/images/taco-single.jpg" data-mfp-src="assets/images/taco-single.jpg alt="Portfolio slider image" class="mfp-item"></div>
+                  </div>
+
+                 <div class="portfolio-slider-item">
+                    <div class="item-image"><img src="assets/images/aria-card.jpg" data-mfp-src="assets/images/aria-card.jpg alt="Portfolio slider image" class="mfp-item"></div>
                   </div>
 
                 </div>
@@ -135,10 +144,10 @@
             </div>
             <div class="col-md-5 col-xs-12 section-block-p">
               <h5 class="smb color-main">Software Development</h5>
-              <h3>Columbus Taco Reviews</h3>
-              <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie.</p>
+              <h3>Columbus Taco Joints</h3>
+              <p>This review website focuses on a taco joints around Columbus, Ohio. Each taco joint was placed into a certain region based on location. Once you pick a particular region, you can choose an indivual restaurant for their review. These are just a few examples of the web app.</p>
               <h5 class="font-serif color-main smb"><b>Programs Used:</b></h5>
-              <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit</p>
+              <p>Java, SQL, HTML5, CSS3, and Spring MVC.</p>
             </div>
           </div>
         </div>
