more up to the dates

--- a/portfolio-details-design.html
+++ b/portfolio-details-design.html
@@ -124,42 +124,29 @@
               <div>
                 <div class="portfolio-box-slider simple-slider dir-nav">
                   <div class="portfolio-slider-item">
-                    <div class="item-image"><img src="assets/images/aria-homepage.jpg" data-mfp-src="assets/images/aria-homepage.jpg" alt="Portfolio slider image" class="mfp-item"></div>
+                    <div class="item-image"><img src="assets/images/design-home.jpg" data-mfp-src="assets/images/design-home.jpg" alt="Portfolio slider image" class="mfp-item"></div>
                   </div>
 
                  <div class="portfolio-slider-item">
-                    <div class="item-image"><img src="assets/images/aria-intro.jpg" data-mfp-src="assets/images/aria-intro.jpg" alt="Portfolio slider image" class="mfp-item"></div>
+                    <div class="item-image"><img src="assets/images/design-other.jpg" data-mfp-src="assets/images/design-other.jpg" alt="Portfolio slider image" class="mfp-item"></div>
                   </div>
 
                  <div class="portfolio-slider-item">
-                    <div class="item-image"><img src="assets/images/aria-start.jpg" data-mfp-src="assets/images/aria-start.jpg alt="Portfolio slider image" class="mfp-item"></div>
+                    <div class="item-image"><img src="assets/images/design-print.jpg" data-mfp-src="assets/images/design-print.jpg alt="Portfolio slider image" class="mfp-item"></div>
                   </div>
 
                  <div class="portfolio-slider-item">
-                    <div class="item-image"><img src="assets/images/aria-card.jpg" data-mfp-src="assets/images/aria-card.jpg alt="Portfolio slider image" class="mfp-item"></div>
+                    <div class="item-image"><img src="assets/images/design-interactive.jpg" data-mfp-src="assets/images/design-interactive.jpg alt="Portfolio slider image" class="mfp-item"></div>
                   </div>
-
-                 <div class="portfolio-slider-item">
-                    <div class="item-image"><img src="assets/images/aria-country-card.jpg" data-mfp-src="assets/images/aria-country-card.jpg alt="Portfolio slider image" class="mfp-item"></div>
-                  </div>
-
-                 <div class="portfolio-slider-item">
-                    <div class="item-image"><img src="assets/images/aria-boss.jpg" data-mfp-src="assets/images/aria-boss.jpg alt="Portfolio slider image" class="mfp-item"></div>
-                  </div>
-
-                 <div class="portfolio-slider-item">
-                    <div class="item-image"><img src="assets/images/aria-credit.jpg" data-mfp-src="assets/images/aria-credit.jpg alt="Portfolio slider image" class="mfp-item"></div>
-                  </div>
-
                 </div>
               </div>
             </div>
             <div class="col-md-5 col-xs-12 section-block-p">
               <h5 class="smb color-main">Software Development</h5>
-              <h3>ARIA VI</h3>
-              <p>This Capstone project was a "Choose Your Own Adventure" game which implements full-stack development skills. The premise of the game gives the user the ability to use their imagination and problem-solving skills throughout their journey to save the kingdom from the evil necromancer.</p>
+              <h3>Graphic Design Website</h3>
+              <p>This is an online portfolio for just my graphic design work. These are just a few examples of the web app.</p>
               <h5 class="font-serif color-main smb"><b>Programs Used:</b></h5>
-              <p>Java, JavaScript, HTML5, CSS3, and Spring MVC.</p>
+              <p>Wordpesss, HTML, CSS.</p>
             </div>
           </div>
         </div>
