--- a/portfolio.html
+++ b/portfolio.html
@@ -167,7 +167,7 @@
                       <div class="cell-middle overlay-content text-center">
                         <h5 class="heading-icon-1">Columbus Ohio Taco Joints</h5>
                         <div class="font-serif caption">Database review website of taco joints</div>
-                        <div class="group-link"><a href="portfolio-details-aria.html" class="icon-link"></a>
+                        <div class="group-link"><a href="portfolio-details-taco.html" class="icon-link"></a>
                           <a href="assets/images/ohioTaco.jpg" class="zoom-link icon-outline-vector-icons-pack-67"></a>
                         </div>
                       </div>
@@ -238,7 +238,7 @@
                       <div class="cell-middle overlay-content text-center">
                         <h5 class="heading-icon-1">mberry design</h5>
                         <div class="font-serif caption">Homepage for more of my graphic design work</div>
-                        <div class="group-link"><a href="#"  class="icon-link"></a><a href="assets/images/design-home.jpg" class="zoom-link icon-outline-vector-icons-pack-67"></a></div>
+                        <div class="group-link"><a href="portfolio-details-design.html"  class="icon-link"></a><a href="assets/images/design-home.jpg" class="zoom-link icon-outline-vector-icons-pack-67"></a></div>
                       </div>
                     </div>
                   </div>
@@ -364,7 +364,7 @@
                       <div class="cell-middle overlay-content text-center">
                         <h5 class="heading-icon-1">Maynard UMC</h5>
                         <div class="font-serif caption">Maynard UMC church web homepage</div>
-                        <div class="group-link"><a href="#"  class="icon-link"></a><a href="assets/images/maynard-home.jpg" class="zoom-link icon-outline-vector-icons-pack-67"></a></div>
+                        <div class="group-link"><a href="portfolio-details-maynard.html"  class="icon-link"></a><a href="assets/images/maynard-home.jpg" class="zoom-link icon-outline-vector-icons-pack-67"></a></div>
                       </div>
                     </div>
                   </div>
