--- a/portfolio-details-maynard.html
+++ b/portfolio-details-maynard.html
@@ -124,42 +124,31 @@
               <div>
                 <div class="portfolio-box-slider simple-slider dir-nav">
                   <div class="portfolio-slider-item">
-                    <div class="item-image"><img src="assets/images/aria-homepage.jpg" data-mfp-src="assets/images/aria-homepage.jpg" alt="Portfolio slider image" class="mfp-item"></div>
+                    <div class="item-image"><img src="assets/images/maynard-home.jpg" data-mfp-src="assets/images/maynard-home.jpg" alt="Portfolio slider image" class="mfp-item"></div>
                   </div>
 
                  <div class="portfolio-slider-item">
-                    <div class="item-image"><img src="assets/images/aria-intro.jpg" data-mfp-src="assets/images/aria-intro.jpg" alt="Portfolio slider image" class="mfp-item"></div>
+                    <div class="item-image"><img src="assets/images/maybard-about.jpg" data-mfp-src="assets/images/maybard-about.jpg" alt="Portfolio slider image" class="mfp-item"></div>
                   </div>
 
                  <div class="portfolio-slider-item">
-                    <div class="item-image"><img src="assets/images/aria-start.jpg" data-mfp-src="assets/images/aria-start.jpg alt="Portfolio slider image" class="mfp-item"></div>
+                    <div class="item-image"><img src="assets/images/maynard-blog.jpg" data-mfp-src="assets/images/maynard-blog.jpg alt="Portfolio slider image" class="mfp-item"></div>
                   </div>
 
                  <div class="portfolio-slider-item">
-                    <div class="item-image"><img src="assets/images/aria-card.jpg" data-mfp-src="assets/images/aria-card.jpg alt="Portfolio slider image" class="mfp-item"></div>
+                    <div class="item-image"><img src="assets/images/maynard-menu.jpg" data-mfp-src="assets/images/maynard-menu.jpg alt="Portfolio slider image" class="mfp-item"></div>
                   </div>
 
-                 <div class="portfolio-slider-item">
-                    <div class="item-image"><img src="assets/images/aria-country-card.jpg" data-mfp-src="assets/images/aria-country-card.jpg alt="Portfolio slider image" class="mfp-item"></div>
-                  </div>
-
-                 <div class="portfolio-slider-item">
-                    <div class="item-image"><img src="assets/images/aria-boss.jpg" data-mfp-src="assets/images/aria-boss.jpg alt="Portfolio slider image" class="mfp-item"></div>
-                  </div>
-
-                 <div class="portfolio-slider-item">
-                    <div class="item-image"><img src="assets/images/aria-credit.jpg" data-mfp-src="assets/images/aria-credit.jpg alt="Portfolio slider image" class="mfp-item"></div>
-                  </div>
-
+                 
                 </div>
               </div>
             </div>
             <div class="col-md-5 col-xs-12 section-block-p">
               <h5 class="smb color-main">Software Development</h5>
-              <h3>ARIA VI</h3>
-              <p>This Capstone project was a "Choose Your Own Adventure" game which implements full-stack development skills. The premise of the game gives the user the ability to use their imagination and problem-solving skills throughout their journey to save the kingdom from the evil necromancer.</p>
+              <h3>Maynard UMC Website</h3>
+              <p>Volunteer group website project for Maynard UMC. This website was built specifically in Wordpress so the individuals who work for the church are able to update the website themselves. A co-worker and I built the backbone of the project and this website is still under construction.</p>
               <h5 class="font-serif color-main smb"><b>Programs Used:</b></h5>
-              <p>Java, JavaScript, HTML5, CSS3, and Spring MVC.</p>
+              <p>Wordpress, HTML, CSS</p>
             </div>
           </div>
         </div>
