--- a/portfolio.html
+++ b/portfolio.html
@@ -280,7 +280,7 @@
                       <div class="cell-middle overlay-content text-center">
                         <h5 class="heading-icon-1">You Are Invited</h5>
                         <div class="font-serif caption">Offical wedding invitaion</div>
-                        <div class="group-link"><a href="#" class="icon-link"></a><a href="assets/images/aq-invite.jpg" class="zoom-link icon-outline-vector-icons-pack-67"></a></div>
+                        <div class="group-link"><a href="portfolio-details-aq.html" class="icon-link"></a><a href="assets/images/aq-invite.jpg" class="zoom-link icon-outline-vector-icons-pack-67"></a></div>
                       </div>
                     </div>
                   </div>
