--- a/portfolio.html
+++ b/portfolio.html
@@ -278,7 +278,7 @@
                   <div class="overlay">
                     <div class="cell-vertical-wrapper">
                       <div class="cell-middle overlay-content text-center">
-                        <h5 class="heading-icon-1">You Are Invited</h5>
+                        <h5 class="heading-icon-1">You Are Invited!</h5>
                         <div class="font-serif caption">Offical wedding invitaion</div>
                         <div class="group-link"><a href="portfolio-details-aq.html" class="icon-link"></a><a href="assets/images/aq-invite.jpg" class="zoom-link icon-outline-vector-icons-pack-67"></a></div>
                       </div>
@@ -294,7 +294,7 @@
                       <div class="cell-middle overlay-content text-center">
                         <h5 class="heading-icon-1">DLA Logo</h5>
                         <div class="font-serif caption">One of the logos in the running for a new branding image</div>
-                        <div class="group-link"><a href="#"  class="icon-link"></a><a href="assets/images/dla-mwr-logo.jpg" class="zoom-link icon-outline-vector-icons-pack-67"></a></div>
+                        <div class="group-link"><a href="portfolio-details-dla.html"  class="icon-link"></a><a href="assets/images/dla-mwr-logo.jpg" class="zoom-link icon-outline-vector-icons-pack-67"></a></div>
                       </div>
                     </div>
                   </div>
@@ -308,7 +308,7 @@
                       <div class="cell-middle overlay-content text-center">
                         <h5 class="heading-icon-1">Virtual Pet</h5>
                         <div class="font-serif caption">This app lets the user feed, water, oil, walk, play and clean the cages of the robotic and organic pets.</div>
-                        <div class="group-link"><a href="#"  class="icon-link"></a><a href="assets/images/robot-cat.jpg" class="zoom-link icon-outline-vector-icons-pack-67"></a></div>
+                        <div class="group-link"><a href="portfolio-details-pets.html"  class="icon-link"></a><a href="assets/images/robot-cat.jpg" class="zoom-link icon-outline-vector-icons-pack-67"></a></div>
                       </div>
                     </div>
                   </div>
@@ -322,7 +322,7 @@
                       <div class="cell-middle overlay-content text-center">
                         <h5 class="heading-icon-1">Fortune Teller</h5>
                         <div class="font-serif caption">App that asks the user specific questions and then reveals their fortune</div>
-                        <div class="group-link"><a href="#"  class="icon-link"></a><a href="assets/images/fortune-teller.jpg" class="zoom-link icon-outline-vector-icons-pack-67"></a></div>
+                        <div class="group-link"><a href="portfolio-details-fortune.html"  class="icon-link"></a><a href="assets/images/fortune-teller.jpg" class="zoom-link icon-outline-vector-icons-pack-67"></a></div>
                       </div>
                     </div>
                   </div>
@@ -336,7 +336,7 @@
                       <div class="cell-middle overlay-content text-center">
                         <h5 class="heading-icon-1">Niche Poster/Font</h5>
                         <div class="font-serif caption">I created a font and utilized in a poster</div>
-                        <div class="group-link"><a href="#"  class="icon-link"></a><a href="assets/images/niche-poster.jpg" class="zoom-link icon-outline-vector-icons-pack-67"></a></div>
+                        <div class="group-link"><a href="portfolio-details-niche.html"  class="icon-link"></a><a href="assets/images/niche-poster.jpg" class="zoom-link icon-outline-vector-icons-pack-67"></a></div>
                       </div>
                     </div>
                   </div>
@@ -350,7 +350,7 @@
                       <div class="cell-middle overlay-content text-center">
                         <h5 class="heading-icon-1">CHSC Mailer</h5>
                         <div class="font-serif caption">Offical mailer for Columbus Healthcare and Safety Consultants</div>
-                        <div class="group-link"><a href="#"  class="icon-link"></a><a href="assets/images/chsc-mailer.jpg" class="zoom-link icon-outline-vector-icons-pack-67"></a></div>
+                        <div class="group-link"><a href="portfolio-details-chsc.html"  class="icon-link"></a><a href="assets/images/chsc-mailer.jpg" class="zoom-link icon-outline-vector-icons-pack-67"></a></div>
                       </div>
                     </div>
                   </div>
@@ -378,7 +378,7 @@
                       <div class="cell-middle overlay-content text-center">
                         <h5 class="heading-icon-1">Oesterle Law</h5>
                         <div class="font-serif caption">Offical logo for Oesterle Law</div>
-                        <div class="group-link"><a href="#"  class="icon-link"></a><a href="assets/images/lawlogo.jpg" class="zoom-link icon-outline-vector-icons-pack-67"></a></div>
+                        <div class="group-link"><a href="portfolio-details-law.html"  class="icon-link"></a><a href="assets/images/lawlogo.jpg" class="zoom-link icon-outline-vector-icons-pack-67"></a></div>
                       </div>
                     </div>
                   </div>
