--- a/portfolio.html
+++ b/portfolio.html
@@ -211,7 +211,7 @@
                       <div class="cell-middle overlay-content text-center">
                         <h5 class="heading-icon-1">Save The Date</h5>
                         <div class="font-serif caption">Offical wedding save the date</div>
-                        <div class="group-link"><a href="#"  class="icon-link"></a><a href="assets/images/save-the-date.jpg" class="zoom-link icon-outline-vector-icons-pack-67"></a></div>
+                        <div class="group-link"><a href="portfolio-details-save-date.html"  class="icon-link"></a><a href="assets/images/save-the-date.jpg" class="zoom-link icon-outline-vector-icons-pack-67"></a></div>
                       </div>
                     </div>
                   </div>
@@ -225,7 +225,7 @@
                       <div class="cell-middle overlay-content text-center">
                         <h5 class="heading-icon-1">CDC Gallery Hop</h5>
                         <div class="font-serif caption">Flyer for a daycare art show</div>
-                        <div class="group-link"><a href="#"  class="icon-link"></a><a href="assets/images/cdc-gallery-hop.jpg" class="zoom-link icon-outline-vector-icons-pack-67"></a></div>
+                        <div class="group-link"><a href="portfolio-details-cdc.html"  class="icon-link"></a><a href="assets/images/cdc-gallery-hop.jpg" class="zoom-link icon-outline-vector-icons-pack-67"></a></div>
                       </div>
                     </div>
                   </div>
