--- a/portfolio.html
+++ b/portfolio.html
@@ -160,13 +160,13 @@
           <div class="portfolio-group container-fluid">
             <div class="row iso-grid">
 
-              <div class="grid-item portfolio-column col-lg-3 col-md-4 col-sm-6 col-xs-12 software">
+              <div class="grid-item portfolio-column col-lg-2 col-md-4 col-sm-6 col-xs-12 software">
                 <div class="portfolio-item portfolio-item-2"><img src="assets/images/ohioTaco.jpg" alt="columbus taco joint">
                   <div class="overlay">
                     <div class="cell-vertical-wrapper">
                       <div class="cell-middle overlay-content text-center">
                         <h5 class="heading-icon-1">Columbus Ohio Taco Joints</h5>
-                        <div class="font-serif caption">Database review website of taco joints</div>
+                        <div class="font-serif caption">Database review website</div>
                         <div class="group-link"><a href="portfolio-details-taco.html" class="icon-link"></a>
                           <a href="assets/images/ohioTaco.jpg" class="zoom-link icon-outline-vector-icons-pack-67"></a>
                         </div>
@@ -190,7 +190,7 @@
                 </div>
               </div>
 
-              <div class="grid-item portfolio-column col-lg-3 col-md-4 col-sm-6 col-xs-12 design">
+              <div class="grid-item portfolio-column col-lg-3 col-md-3 col-sm-6 col-xs-12 design">
                 <div class="portfolio-item portfolio-item-2"><img src="assets/images/peace-mission-brochure.jpg" alt="CREATIVELY DESIGNED">
                   <div class="overlay">
                     <div class="cell-vertical-wrapper">
@@ -252,7 +252,7 @@
                       <div class="cell-middle overlay-content text-center">
                         <h5 class="heading-icon-1">Bunker Menu</h5>
                         <div class="font-serif caption">Menu for the Eagle Eye Golf Course club</div>
-                        <div class="group-link"><a href="#"  class="icon-link"></a><a href="assets/images/bunker-menu.jpg" class="zoom-link icon-outline-vector-icons-pack-67"></a></div>
+                        <div class="group-link"><a href="portfolio-details-bunker.html"  class="icon-link"></a><a href="assets/images/bunker-menu.jpg" class="zoom-link icon-outline-vector-icons-pack-67"></a></div>
                       </div>
                     </div>
                   </div>
@@ -266,14 +266,14 @@
                       <div class="cell-middle overlay-content text-center">
                         <h5 class="heading-icon-1">Columbus Symphony/Smokey Robinson</h5>
                         <div class="font-serif caption">Flyer to promote tickets for Smokey Robinson and Columbus Symphony</div>
-                        <div class="group-link"><a href="#"  class="icon-link"></a><a href="assets/images/smokey-symphony.jpg" class="zoom-link icon-outline-vector-icons-pack-67"></a></div>
+                        <div class="group-link"><a href="portfolio-details-smokey.html"  class="icon-link"></a><a href="assets/images/smokey-symphony.jpg" class="zoom-link icon-outline-vector-icons-pack-67"></a></div>
                       </div>
                     </div>
                   </div>
                 </div>
               </div>
 
-              <div class="grid-item portfolio-column col-lg-2 col-md-4 col-sm-6 col-xs-12 design">
+              <div class="grid-item portfolio-column col-lg-3 col-md-4 col-sm-6 col-xs-12 design">
                 <div class="portfolio-item portfolio-item-2"><img src="assets/images/aq-invite.jpg" alt="CREATIVELY DESIGNED">
                   <div class="overlay">
                     <div class="cell-vertical-wrapper">
@@ -287,13 +287,13 @@
                 </div>
               </div>
 
-              <div class="grid-item portfolio-column col-lg-3 col-md-4 col-sm-6 col-xs-5 design">
+              <div class="grid-item portfolio-column col-lg-2 col-md-4 col-sm-6 col-xs-5 design">
                 <div class="portfolio-item portfolio-item-2"><img src="assets/images/dla-mwr-logo.jpg" alt="CREATIVELY DESIGNED">
                   <div class="overlay">
                     <div class="cell-vertical-wrapper">
                       <div class="cell-middle overlay-content text-center">
                         <h5 class="heading-icon-1">DLA Logo</h5>
-                        <div class="font-serif caption">One of the logos in the running for a new branding image</div>
+                        <div class="font-serif caption"> Logo for new branding image</div>
                         <div class="group-link"><a href="portfolio-details-dla.html"  class="icon-link"></a><a href="assets/images/dla-mwr-logo.jpg" class="zoom-link icon-outline-vector-icons-pack-67"></a></div>
                       </div>
                     </div>
@@ -315,7 +315,7 @@
                 </div>
               </div>
 
-              <div class="grid-item portfolio-column col-lg-2 col-md-4 col-sm-6 col-xs-12 software">
+              <div class="grid-item portfolio-column col-lg-3 col-md-4 col-sm-7 col-xs-12 software">
                 <div class="portfolio-item portfolio-item-2"><img src="assets/images/fortune-teller.jpg" alt="CREATIVELY DESIGNED">
                   <div class="overlay">
                     <div class="cell-vertical-wrapper">
@@ -371,7 +371,7 @@
                 </div>
               </div>
 
-              <div class="grid-item portfolio-column col-lg-2 col-md-4 col-sm-6 col-xs-12 design">
+              <div class="grid-item portfolio-column col-lg-4 col-md-4 col-sm-8 col-xs-12 design">
                 <div class="portfolio-item portfolio-item-2"><img src="assets/images/lawlogo.jpg" alt="CREATIVELY DESIGNED">
                   <div class="overlay">
                     <div class="cell-vertical-wrapper">
