--- a/page-contact.html
+++ b/page-contact.html
@@ -130,11 +130,11 @@
                 Call me at 614-371-9498 or </h4>
                 <h4>EMAIL ME!</h5>
                 <div class="widget contact-us">
-                  <form id="contact_form">
+                  <form action="contact.php">
                     <input type="text" name="name" placeholder="Name" required class="name">
                     <input type="email" name="email" placeholder="Email" required class="email">
                     <textarea name="message" placeholder="Message" required class="msg"></textarea>
-                    <button type="submit" class="normal-btn normal-btn-main btn-size-5">SUBMIT</button>
+                    <button input type="submit" class="normal-btn normal-btn-main btn-size-5">SUBMIT</button>
                   </form>
                 </div>
               </div>
