--- a/page-contact.html
+++ b/page-contact.html
@@ -127,17 +127,21 @@
 
               <div class="col-md-offset-30 col-md-4 col-sm-8 col-sm-offset-2 col-xs-12">
                 <h5>NEED TO REACH ME?
-                Call me at 614-371-9498 or </h4>
-                <h4>EMAIL ME!</h5>
+                Call me at 614-371-9498 or </h5>
+                <h4>EMAIL ME!</h4>
                 <div class="widget contact-us">
-                  <form action="contact.php">
+                  <form id="contact_form">
                     <input type="text" name="name" placeholder="Name" required class="name">
                     <input type="email" name="email" placeholder="Email" required class="email">
                     <textarea name="message" placeholder="Message" required class="msg"></textarea>
-                    <button input type="submit" class="normal-btn normal-btn-main btn-size-5">SUBMIT</button>
+                    <button type="submit" class="normal-btn normal-btn-main btn-size-5">SUBMIT</button>
                   </form>
                 </div>
               </div>
+        </div>
+      </div>
+    </div>
+
             </div>
           </div>
           <div class="footer-foot text-center">
@@ -157,7 +161,9 @@
               </div>
             </div>
           </div>
-
+          <div class="footer-foot text-center">
+            <p>© Micaela Berry Portfolio</p>
+          </div>
         </div>
       </footer>
       <!--end site footer-->
