--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
               <div class="col-md-offset-30 col-md-4 col-sm-8 col-sm-offset-2 col-xs-12">
                 <h5>CONTACT ME</h5>
                 <div class="widget contact-us">
-                  <form id="contact_form">
+                  <form id="contact_form" method="post" action="contact.php" role="form">
                     <input type="text" name="name" placeholder="Name" required class="name">
                     <input type="email" name="email" placeholder="Email" required class="email">
                     <textarea name="message" placeholder="Message" required class="msg"></textarea>
@@ -333,8 +333,10 @@
                   </form>
                 </div>
               </div>
+
             </div>
           </div>
+        </div>
           <div class="footer-foot text-center">
             <p>© Micaela Berry Portfolio</p>
           </div>
