--- a/aboutme.html
+++ b/aboutme.html
@@ -53,7 +53,7 @@
               </li>
               <li><a href="#">PAGES</a>
                 <ul>
-                  <li><a href="aboutme.html">ABOUT ME</a></li>
+                  <!-- <li><a href="aboutme.html">ABOUT ME</a></li> -->
                   <li><a href="page-contact.html">CONTACT ME</a></li>
                 </ul>
               </li>
