--- a/page-contact.html
+++ b/page-contact.html
@@ -141,6 +141,11 @@
         </div>
       </div>
     </div>
+
+            </div>
+          </div>
+        </div>
+      </footer>
       <!--site footer-->
  <footer class="footer-preset-02">
 
