--- a/index.html
+++ b/index.html
@@ -323,15 +323,20 @@
               </div>
 
               <div class="col-md-offset-30 col-md-4 col-sm-8 col-sm-offset-2 col-xs-12">
-                <h5>CONTACT ME</h5>
-                <div class="widget contact-us">
-                  <form id="contact_form" method="post" action="contact.php" role="form">
+                <h2>CONTACT ME</h2>
+                <h4><a href="mailto:msberry9@gmail.com"><u>Email Me</u> at msberry9@gmail.com</a></h4>
+                <h4> Or call me at 614-371-9498</h4>
+                <br></br>
+                <h6> email form coming soon </h6>
+               <div class="widget contact-us">
+                  <form id="contact_form"  role="form">
+                    <form action="contact.php" method="POST"> 
                     <input type="text" name="name" placeholder="Name" required class="name">
                     <input type="email" name="email" placeholder="Email" required class="email">
                     <textarea name="message" placeholder="Message" required class="msg"></textarea>
                     <button type="submit" class="normal-btn normal-btn-main btn-size-5">SUBMIT</button>
                   </form>
-                </div>
+                </div> 
               </div>
 
             </div>
