--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
                 <br></br>
                 <h6> email form coming soon </h6>
                <div class="widget contact-us">
-                  <form id="contact_form"  role="form">
+                  <!-- <form id="contact_form"  role="form"> -->
                     <form action="contact.php" method="POST"> 
                     <input type="text" name="name" placeholder="Name" required class="name">
                     <input type="email" name="email" placeholder="Email" required class="email">
