--- a/index.html
+++ b/index.html
@@ -327,18 +327,18 @@
                 <h4><a href="mailto:msberry9@gmail.com"><u>Email Me</u> at msberry9@gmail.com</a></h4>
                 <h4> Or call me at 614-371-9498</h4>
                 <br></br>
-                <h6> email form coming soon </h6>
+<!--                 <h6> email form coming soon </h6>
                <div class="widget contact-us">
-                  <!-- <form id="contact_form"  role="form"> -->
+                   <form id="contact_form"  role="form"> 
                     <form action="contact.php" method="POST"> 
                     <input type="text" name="name" placeholder="Name" required class="name">
                     <input type="email" name="email" placeholder="Email" required class="email">
                     <textarea name="message" placeholder="Message" required class="msg"></textarea>
                     <button type="submit" class="normal-btn normal-btn-main btn-size-5">SUBMIT</button>
                   </form>
-                </div> 
-              </div>
+                </div>  -->
 
+              </div>
             </div>
           </div>
         </div>
