working on extra

--- a/portfolio.html
+++ b/portfolio.html
@@ -176,7 +176,7 @@
                 </div>
               </div>
 
-               <div class="grid-item portfolio-column col-lg-4 col-md-4 col-sm-6 col-xs-12 interior fashion">
+               <div class="grid-item portfolio-column col-lg-4 col-md-4 col-sm-6 col-xs-12 software">
                 <div class="portfolio-item portfolio-item-2"><img src="assets/images/aria-homepage.jpg" alt="CREATIVELY DESIGNED">
                   <div class="overlay">
                     <div class="cell-vertical-wrapper">
