working on extra

--- a/aboutme.html
+++ b/aboutme.html
@@ -53,8 +53,8 @@
               </li>
               <li><a href="#">PAGES</a>
                 <ul>
-                  <!-- <li><a href="aboutme.html">ABOUT ME</a></li> -->
-                  <li><a href="page-contact.html">CONTACT ME</a></li>
+                  <li><a href="aboutme.html">ABOUT ME</a></li>
+                  <!-- <li><a href="page-contact.html">CONTACT ME</a></li> -->
                 </ul>
               </li>
 
@@ -109,7 +109,7 @@
         <header class="section-header header-type-2 style-1">
           <div class="container">
             <h4 class="heading-hr-1">ABOUT ME</h4>
-            <q class="header-caption">Hello! I'm Micaela and I am an aspiring unicorn aka a full-stack developer. I have a Bachelor's Degree from Ohio University and I recently graduated from We Can Code IT, software development bootcamp to enhance my programing knowledge and skills. In my previous position, I worked as a Graphic Designer where I implemented marketing, graphic design, and web strategies. I found myself entralled in the web and user application side of of my responsibilities which led me to explore the technical side of the design field. I'm excited to take the experience, knowledge, and skills I have gained and use them in a professional setting. I look forward to problem solving and implementing new and creative ideas.</q>
+            <q class="header-caption">Hello! I'm Micaela and I am an aspiring unicorn aka a full-stack developer. I have a Bachelor's Degree from Ohio University and I recently graduated from We Can Code IT, software development bootcamp to enhance my programing knowledge and skills. In my previous position, I worked as a Graphic Designer where I implemented marketing, graphic design, and web strategies. I found myself enthralled with the web and user application side of of my responsibilities which led me to explore the technical side of the design field. I'm excited to take the experience, knowledge, and skills I have gained and use them in a professional setting. I look forward to problem solving and implementing new and creative ideas.</q>
           </div>
         </header>
 
@@ -146,7 +146,7 @@
         <header class="section-header header-type-2 style-1">
           <div class="container">
             <h4 class="heading-hr-1">MAD SKILLS</h4>        
-            <a href="assets/images/Micaela-Berry-Resume.pdf" target="_blank">Click to download resume for reference</a>
+            <a href="assets/images/Micaela-Berry-Resume.pdf" target="_blank">Click here to download my resume for your reference</a>
           </div>
         </header>
         <div class="container">
@@ -179,7 +179,7 @@
                         <ul>
                           <li>Java </li>
                           <li>Spring</li>
-                          <li>MVC</li                          
+                          <li>MVC</li>                          
                           <li>SQL</li>
                           <li>Hibernate </li>
                           <li>OOP</li>
@@ -194,7 +194,7 @@
                     <div id="service-item-1-2" class="panel-collapse collapse">
                       <div class="panel-body"></div>
                       <ul>
-                          <li>Logo &amp; Brand Development</li>                       
+                          <li>Logo &amp; Brand Development</li>   
                           <li>Teamwork</li>
                           <li>Collaboration</li>
                           <li>Video Production </li>
