--- a/page-contact.html
+++ b/page-contact.html
@@ -75,7 +75,7 @@
                 </ul>
               </li >
               
-              <li><a href="#">PORTFOLIO</a> 
+              <li><a href="portfolio/html">PORTFOLIO</a> 
               </li>
 
             </ul>
@@ -137,7 +137,7 @@
                     <button type="submit" class="normal-btn normal-btn-main btn-size-5">SUBMIT</button>
                   </form>
                 </div> -->
-                
+
 
             </div>
             </div>
