--- a/index.html
+++ b/index.html
@@ -89,14 +89,14 @@
             <div class="division"><span></span></div>
 
             <div class="division"><span></span></div>
-            <div class="nav-social">
+<!--             <div class="nav-social">
               <ul class="social-01">
                 <li><a href="https://github.com/micaelaberry"><i class="fa fa-github"></i></a></li>
                 <li><a href="https://www.linkedin.com/in/micaela-berry"><i class="fa fa-linkedin"></i></a></li>
                 <li><a href="https://plus.google.com/107768663606450418299"><i class="fa fa-google-plus"> </i></a></li>
                 
               </ul>
-            </div>
+            </div> -->
           </div>
 
         </div>
