--- a/aboutme.html
+++ b/aboutme.html
@@ -54,7 +54,7 @@
               <li><a href="#">PAGES</a>
                 <ul>
                   <li><a href="aboutme.html">ABOUT ME</a></li>
-                  <!-- <li><a href="page-contact.html">CONTACT ME</a></li> -->
+                  <li><a href="page-contact.html">CONTACT ME</a></li> 
                 </ul>
               </li>
 
